# JellyCoder

./: .flake8  .gitignore  README.md  encode_videos.py  pyproject.toml
jelly_coder/: cli.py  core.py
tests/: conftest.py  test_cli.py  test_core.py  test_core_branches.py  test_encode_videos.py
video_reducer/: __init__.py  cli.py  core.py
