[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jellycoder"
version = "0.1.0"
description = "Video reduction tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.pytest.ini_options]
addopts = "-q --cov=video_reducer --cov=encode_videos --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["video_reducer", "encode_videos"]

[tool.coverage.report]
show_missing = true
fail_under = 100
